...
        "by": ["the", "a", "my"],
        "up": ["to", "and", "with"],
        "out": ["of", "there", "to"],
        "all": ["the", "of", "day"],
        "there": ["is", "are", "was"],
        "been": ["a", "to", "there"],
        "one": ["of", "day", "more"],
        "would": ["be", "you", "like"],
        "could": ["be", "you", "not"],
        "should": ["be", "I", "we"],
        "did": ["you", "not", "the"],
        "had": ["a", "to", "been"],
        "has": ["been", "a", "to"],
...
